[tool.poetry]
name = "app"
description = ""
version = "0.1.0"
authors = ["Olga Kozlova <2105894+eventlistener@users.noreply.github.com>"]
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
aiohttp = "~3.9"
cerberus = "~1.3.5"
genshi = "~0.7.7"
aiofiles = "~23.2.1"

[tool.poetry.group.test.dependencies]
flake518 = "~1.6"
flake8 = "~6.1"
pytest = "~7.4"
pytest-random-order = "~1.1"
pytest-asyncio = "~0.23.4"

[tool.flake8]
extend-exclude = [".venv"]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "--random-order"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
